// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Avatar Accent Colors 1`] = `
<section>
  

  <span
    aria-label="Avatar"
    class="fd-avatar fd-avatar--accent-color-1 fd-avatar--m"
    role="img"
  >
    
    
    <i
      class="fd-avatar__icon sap-icon--money-bills"
      role="presentation"
    />
    

  </span>
  

  <span
    aria-label="Avatar"
    class="fd-avatar fd-avatar--accent-color-2 fd-avatar--m"
    role="img"
  >
    
    
    <i
      class="fd-avatar__icon sap-icon--money-bills"
      role="presentation"
    />
    

  </span>
  

  <span
    aria-label="Avatar"
    class="fd-avatar fd-avatar--accent-color-3 fd-avatar--m"
    role="img"
  >
    
    
    <i
      class="fd-avatar__icon sap-icon--money-bills"
      role="presentation"
    />
    

  </span>
  

  <span
    aria-label="Avatar"
    class="fd-avatar fd-avatar--accent-color-4 fd-avatar--m"
    role="img"
  >
    
    
    <i
      class="fd-avatar__icon sap-icon--money-bills"
      role="presentation"
    />
    

  </span>
  

  <span
    aria-label="Avatar"
    class="fd-avatar fd-avatar--accent-color-5 fd-avatar--m"
    role="img"
  >
    
    
    <i
      class="fd-avatar__icon sap-icon--money-bills"
      role="presentation"
    />
    

  </span>
  

  <span
    aria-label="Avatar"
    class="fd-avatar fd-avatar--accent-color-6 fd-avatar--m"
    role="img"
  >
    
    
    <i
      class="fd-avatar__icon sap-icon--money-bills"
      role="presentation"
    />
    

  </span>
  

  <span
    aria-label="Avatar"
    class="fd-avatar fd-avatar--accent-color-7 fd-avatar--m"
    role="img"
  >
    
    
    <i
      class="fd-avatar__icon sap-icon--money-bills"
      role="presentation"
    />
    

  </span>
  

  <span
    aria-label="Avatar"
    class="fd-avatar fd-avatar--accent-color-8 fd-avatar--m"
    role="img"
  >
    
    
    <i
      class="fd-avatar__icon sap-icon--money-bills"
      role="presentation"
    />
    

  </span>
  

  <span
    aria-label="Avatar"
    class="fd-avatar fd-avatar--accent-color-9 fd-avatar--m"
    role="img"
  >
    
    
    <i
      class="fd-avatar__icon sap-icon--money-bills"
      role="presentation"
    />
    

  </span>
  

  <span
    aria-label="Avatar"
    class="fd-avatar fd-avatar--accent-color-10 fd-avatar--m"
    role="img"
  >
    
    
    <i
      class="fd-avatar__icon sap-icon--money-bills"
      role="presentation"
    />
    

  </span>
  

</section>
`;

exports[`Storyshots Components/Avatar Background Image 1`] = `
<section>
  

  <span
    aria-label="John Doe"
    class="fd-avatar fd-avatar--xs fd-avatar--circle fd-avatar--thumbnail"
    role="img"
    style="background-image: url('/assets/images/avatars/1.svg')"
  />
  

  <span
    aria-label="John Doe"
    class="fd-avatar fd-avatar--s fd-avatar--circle fd-avatar--thumbnail"
    role="img"
    style="background-image: url('/assets/images/avatars/2.svg')"
  />
  

  <span
    aria-label="John Doe"
    class="fd-avatar fd-avatar--m fd-avatar--circle fd-avatar--thumbnail"
    role="img"
    style="background-image: url('/assets/images/avatars/3.svg')"
  />
  

  <span
    aria-label="John Doe"
    class="fd-avatar fd-avatar--l fd-avatar--circle fd-avatar--thumbnail"
    role="img"
    style="background-image: url('/assets/images/avatars/4.svg')"
  />
  

  <span
    aria-label="John Doe"
    class="fd-avatar fd-avatar--xl fd-avatar--circle fd-avatar--thumbnail"
    role="img"
    style="background-image: url('/assets/images/avatars/5.svg')"
  />
  

  <span
    aria-label="John Doe"
    class="fd-avatar fd-avatar--xl fd-avatar--thumbnail"
    role="img"
    style="background-image: url('/assets/images/backgrounds/leaves.jpg')"
  />
  

  <span
    aria-label="John Doe"
    class="fd-avatar fd-avatar--xl fd-avatar--thumbnail fd-avatar--background-contain"
    role="img"
    style="background-image: url('/assets/images/backgrounds/leaves.jpg')"
  />
  

</section>
`;

exports[`Storyshots Components/Avatar Borders 1`] = `
<section>
  

  <span
    aria-label="Avatar"
    class="fd-avatar fd-avatar--xs fd-avatar--transparent fd-avatar--border"
    role="img"
  >
    
    
    <i
      class="fd-avatar__icon sap-icon--money-bills"
      role="presentation"
    />
    

  </span>
  

  <span
    aria-label="Avatar"
    class="fd-avatar fd-avatar--s fd-avatar--transparent fd-avatar--border"
    role="img"
  >
    
    
    <i
      class="fd-avatar__icon sap-icon--money-bills"
      role="presentation"
    />
    

  </span>
  

  <span
    aria-label="Avatar"
    class="fd-avatar fd-avatar--m fd-avatar--transparent fd-avatar--border"
    role="img"
  >
    
    
    <i
      class="fd-avatar__icon sap-icon--money-bills"
      role="presentation"
    />
    

  </span>
  

  <span
    aria-label="Avatar"
    class="fd-avatar fd-avatar--l fd-avatar--transparent fd-avatar--border"
    role="img"
  >
    
    
    <i
      class="fd-avatar__icon sap-icon--money-bills"
      role="presentation"
    />
    

  </span>
  

  <span
    aria-label="Avatar"
    class="fd-avatar fd-avatar--xl fd-avatar--transparent fd-avatar--border"
    role="img"
  >
    
    
    <i
      class="fd-avatar__icon sap-icon--money-bills"
      role="presentation"
    />
    

  </span>
  

  <span
    aria-label="Wendy Wallace"
    class="fd-avatar fd-avatar--xs fd-avatar--circle fd-avatar--transparent fd-avatar--border"
    role="img"
  >
    WW

  </span>
  

  <span
    aria-label="Wendy Wallace"
    class="fd-avatar fd-avatar--s fd-avatar--circle fd-avatar--transparent fd-avatar--border"
    role="img"
  >
    WW

  </span>
  

  <span
    aria-label="Wendy Wallace"
    class="fd-avatar fd-avatar--m fd-avatar--circle fd-avatar--transparent fd-avatar--border"
    role="img"
  >
    WW

  </span>
  

  <span
    aria-label="Wendy Wallace"
    class="fd-avatar fd-avatar--l fd-avatar--circle fd-avatar--transparent fd-avatar--border"
    role="img"
  >
    WW

  </span>
  

  <span
    aria-label="Wendy Wallace"
    class="fd-avatar fd-avatar--xl fd-avatar--circle fd-avatar--transparent fd-avatar--border"
    role="img"
  >
    WW

  </span>
  

</section>
`;

exports[`Storyshots Components/Avatar Circle 1`] = `
<section>
  

  <span
    aria-label="Avatar"
    class="fd-avatar fd-avatar--xs fd-avatar--circle"
    role="img"
  >
    
    
    <i
      class="fd-avatar__icon sap-icon--money-bills"
      role="presentation"
    />
    

  </span>
  

  <span
    aria-label="Avatar"
    class="fd-avatar fd-avatar--s fd-avatar--circle"
    role="img"
  >
    
    
    <i
      class="fd-avatar__icon sap-icon--money-bills"
      role="presentation"
    />
    

  </span>
  

  <span
    aria-label="Avatar"
    class="fd-avatar fd-avatar--m fd-avatar--circle"
    role="img"
  >
    
    
    <i
      class="fd-avatar__icon sap-icon--money-bills"
      role="presentation"
    />
    

  </span>
  

  <span
    aria-label="Avatar"
    class="fd-avatar fd-avatar--l fd-avatar--circle"
    role="img"
  >
    
    
    <i
      class="fd-avatar__icon sap-icon--money-bills"
      role="presentation"
    />
    

  </span>
  

  <span
    aria-label="Avatar"
    class="fd-avatar fd-avatar--xl fd-avatar--circle"
    role="img"
  >
    
    
    <i
      class="fd-avatar__icon sap-icon--money-bills"
      role="presentation"
    />
    

  </span>
  

  <span
    aria-label="Wendy Wallace"
    class="fd-avatar fd-avatar--xs fd-avatar--circle"
    role="img"
  >
    WW
  </span>
  

  <span
    aria-label="Wendy Wallace"
    class="fd-avatar fd-avatar--s fd-avatar--circle"
    role="img"
  >
    WW
  </span>
  

  <span
    aria-label="Wendy Wallace"
    class="fd-avatar fd-avatar--m fd-avatar--circle"
    role="img"
  >
    WW
  </span>
  

  <span
    aria-label="Wendy Wallace"
    class="fd-avatar fd-avatar--l fd-avatar--circle"
    role="img"
  >
    WW
  </span>
  

  <span
    aria-label="Wendy Wallace"
    class="fd-avatar fd-avatar--xl fd-avatar--circle"
    role="img"
  >
    WW
  </span>
  

</section>
`;

exports[`Storyshots Components/Avatar Icon 1`] = `
<section>
  

  <span
    class="fd-avatar fd-avatar--xs"
    role="presentation"
  >
    
    
    <i
      class="fd-avatar__icon sap-icon--washing-machine"
      role="presentation"
    />
    

  </span>
  

  <span
    class="fd-avatar fd-avatar--s"
    role="presentation"
  >
    
    
    <i
      class="fd-avatar__icon sap-icon--washing-machine"
      role="presentation"
    />
    

  </span>
  

  <span
    class="fd-avatar fd-avatar--m"
    role="presentation"
  >
    
    
    <i
      class="fd-avatar__icon sap-icon--washing-machine"
      role="presentation"
    />
    

  </span>
  

  <span
    class="fd-avatar fd-avatar--l"
    role="presentation"
  >
    
    
    <i
      class="fd-avatar__icon sap-icon--washing-machine"
      role="presentation"
    />
    

  </span>
  

  <span
    class="fd-avatar fd-avatar--xl"
    role="presentation"
  >
    
    
    <i
      class="fd-avatar__icon sap-icon--washing-machine"
      role="presentation"
    />
    

  </span>
  

</section>
`;

exports[`Storyshots Components/Avatar Initials 1`] = `
<section>
  

  <span
    aria-label="Wendy Wallace"
    class="fd-avatar fd-avatar--xs"
    role="img"
  >
    WW
  </span>
  

  <span
    aria-label="Wendy Wallace"
    class="fd-avatar fd-avatar--s"
    role="img"
  >
    WW
  </span>
  

  <span
    aria-label="Wendy Wallace"
    class="fd-avatar fd-avatar--m"
    role="img"
  >
    WW
  </span>
  

  <span
    aria-label="Wendy Wallace"
    class="fd-avatar fd-avatar--l"
    role="img"
  >
    WW
  </span>
  

  <span
    aria-label="Wendy Wallace"
    class="fd-avatar fd-avatar--xl"
    role="img"
  >
    WW
  </span>
  

</section>
`;

exports[`Storyshots Components/Avatar Placeholder Background 1`] = `
<section>
  

  <span
    aria-label="Avatar"
    class="fd-avatar fd-avatar--xs fd-avatar--circle fd-avatar--placeholder"
    role="img"
  >
    
    
    <i
      class="fd-avatar__icon sap-icon--money-bills"
      role="presentation"
    />
    

  </span>
  

  <span
    aria-label="Avatar"
    class="fd-avatar fd-avatar--s fd-avatar--circle fd-avatar--placeholder"
    role="img"
  >
    
    
    <i
      class="fd-avatar__icon sap-icon--money-bills"
      role="presentation"
    />
    

  </span>
  

  <span
    aria-label="Avatar"
    class="fd-avatar fd-avatar--m fd-avatar--circle fd-avatar--placeholder"
    role="img"
  >
    
    
    <i
      class="fd-avatar__icon sap-icon--money-bills"
      role="presentation"
    />
    

  </span>
  

  <span
    aria-label="Avatar"
    class="fd-avatar fd-avatar--l fd-avatar--circle fd-avatar--placeholder"
    role="img"
  >
    
    
    <i
      class="fd-avatar__icon sap-icon--money-bills"
      role="presentation"
    />
    

  </span>
  

  <span
    aria-label="Avatar"
    class="fd-avatar fd-avatar--xl fd-avatar--circle fd-avatar--placeholder"
    role="img"
  >
    
    
    <i
      class="fd-avatar__icon sap-icon--money-bills"
      role="presentation"
    />
    

  </span>
  

</section>
`;

exports[`Storyshots Components/Avatar Tile Icon Background 1`] = `
<section>
  

  <span
    aria-label="Avatar"
    class="fd-avatar fd-avatar--xs fd-avatar--circle fd-avatar--tile"
    role="img"
  >
    
    
    <i
      class="fd-avatar__icon sap-icon--money-bills"
      role="presentation"
    />
    

  </span>
  

  <span
    aria-label="Avatar"
    class="fd-avatar fd-avatar--s fd-avatar--circle fd-avatar--tile"
    role="img"
  >
    
    
    <i
      class="fd-avatar__icon sap-icon--money-bills"
      role="presentation"
    />
    

  </span>
  

  <span
    aria-label="Avatar"
    class="fd-avatar fd-avatar--m fd-avatar--circle fd-avatar--tile"
    role="img"
  >
    
    
    <i
      class="fd-avatar__icon sap-icon--money-bills"
      role="presentation"
    />
    

  </span>
  

  <span
    aria-label="Avatar"
    class="fd-avatar fd-avatar--l fd-avatar--circle fd-avatar--tile"
    role="img"
  >
    
    
    <i
      class="fd-avatar__icon sap-icon--money-bills"
      role="presentation"
    />
    

  </span>
  

  <span
    aria-label="Avatar"
    class="fd-avatar fd-avatar--xl fd-avatar--circle fd-avatar--tile"
    role="img"
  >
    
    
    <i
      class="fd-avatar__icon sap-icon--money-bills"
      role="presentation"
    />
    

  </span>
  

</section>
`;

exports[`Storyshots Components/Avatar Transparent 1`] = `
<section>
  

  <span
    aria-label="Avatar"
    class="fd-avatar fd-avatar--xs fd-avatar--circle fd-avatar--transparent"
    role="img"
  >
    
    
    <i
      class="fd-avatar__icon sap-icon--money-bills"
      role="presentation"
    />
    

  </span>
  

  <span
    aria-label="Avatar"
    class="fd-avatar fd-avatar--s fd-avatar--circle fd-avatar--transparent"
    role="img"
  >
    
    
    <i
      class="fd-avatar__icon sap-icon--money-bills"
      role="presentation"
    />
    

  </span>
  

  <span
    aria-label="Avatar"
    class="fd-avatar fd-avatar--m fd-avatar--circle fd-avatar--transparent"
    role="img"
  >
    
    
    <i
      class="fd-avatar__icon sap-icon--money-bills"
      role="presentation"
    />
    

  </span>
  

  <span
    aria-label="Avatar"
    class="fd-avatar fd-avatar--l fd-avatar--circle fd-avatar--transparent"
    role="img"
  >
    
    
    <i
      class="fd-avatar__icon sap-icon--money-bills"
      role="presentation"
    />
    

  </span>
  

  <span
    aria-label="Avatar"
    class="fd-avatar fd-avatar--xl fd-avatar--circle fd-avatar--transparent"
    role="img"
  >
    
    
    <i
      class="fd-avatar__icon sap-icon--money-bills"
      role="presentation"
    />
    

  </span>
  

  <span
    aria-label="Wendy Wallace"
    class="fd-avatar fd-avatar--xs fd-avatar--circle fd-avatar--transparent"
    role="img"
  >
    WW
  </span>
  

  <span
    aria-label="Wendy Wallace"
    class="fd-avatar fd-avatar--s fd-avatar--circle fd-avatar--transparent"
    role="img"
  >
    WW
  </span>
  

  <span
    aria-label="Wendy Wallace"
    class="fd-avatar fd-avatar--m fd-avatar--circle fd-avatar--transparent"
    role="img"
  >
    WW
  </span>
  

  <span
    aria-label="Wendy Wallace"
    class="fd-avatar fd-avatar--l fd-avatar--circle fd-avatar--transparent"
    role="img"
  >
    WW
  </span>
  

  <span
    aria-label="Wendy Wallace"
    class="fd-avatar fd-avatar--xl fd-avatar--circle fd-avatar--transparent"
    role="img"
  >
    WW
  </span>
  

</section>
`;

exports[`Storyshots Components/Avatar Zoom Icon 1`] = `
<section>
  

  <span
    aria-label="Avatar"
    class="fd-avatar fd-avatar--xs fd-avatar--circle fd-avatar--accent-color-1"
    role="img"
  >
    
    
    <i
      class="fd-avatar__icon sap-icon--money-bills"
      role="presentation"
    />
    
    
    <i
      aria-label="Edit"
      class="fd-avatar__zoom-icon sap-icon--edit"
      role="button"
    />
    

  </span>
  

  <span
    aria-label="Avatar"
    class="fd-avatar fd-avatar--s fd-avatar--circle fd-avatar--accent-color-2"
    role="img"
  >
    
    
    <i
      class="fd-avatar__icon sap-icon--money-bills"
      role="presentation"
    />
    
    
    <i
      aria-label="Edit"
      class="fd-avatar__zoom-icon sap-icon--edit"
      role="button"
    />
    

  </span>
  

  <span
    aria-label="Avatar"
    class="fd-avatar fd-avatar--m fd-avatar--circle fd-avatar--accent-color-3"
    role="img"
  >
    
    
    <i
      class="fd-avatar__icon sap-icon--money-bills"
      role="presentation"
    />
    
    
    <i
      aria-label="Edit"
      class="fd-avatar__zoom-icon sap-icon--edit"
      role="button"
    />
    

  </span>
  

  <span
    aria-label="Avatar"
    class="fd-avatar fd-avatar--l fd-avatar--circle fd-avatar--accent-color-4"
    role="img"
  >
    
    
    <i
      class="fd-avatar__icon sap-icon--money-bills"
      role="presentation"
    />
    
    
    <i
      aria-label="Edit"
      class="fd-avatar__zoom-icon sap-icon--edit"
      role="button"
    />
    

  </span>
  

  <span
    aria-label="Avatar"
    class="fd-avatar fd-avatar--xl fd-avatar--circle fd-avatar--accent-color-5"
    role="img"
  >
    
    
    <i
      class="fd-avatar__icon sap-icon--money-bills"
      role="presentation"
    />
    
    
    <i
      aria-label="Edit"
      class="fd-avatar__zoom-icon sap-icon--edit"
      role="button"
    />
    

  </span>
  

  <span
    aria-label="Wendy Wallace"
    class="fd-avatar fd-avatar--accent-color-6 fd-avatar--xs"
    role="img"
  >
    WW
    
    <i
      aria-label="Edit"
      class="fd-avatar__zoom-icon sap-icon--edit"
      role="button"
    />
    

  </span>
  

  <span
    aria-label="Wendy Wallace"
    class="fd-avatar fd-avatar--accent-color-7 fd-avatar--s"
    role="img"
  >
    WW
    
    <i
      aria-label="Edit"
      class="fd-avatar__zoom-icon sap-icon--edit"
      role="button"
    />
    

  </span>
  

  <span
    aria-label="Wendy Wallace"
    class="fd-avatar fd-avatar--accent-color-8 fd-avatar--m"
    role="img"
  >
    WW
    
    <i
      aria-label="Edit"
      class="fd-avatar__zoom-icon sap-icon--edit"
      role="button"
    />
    

  </span>
  

  <span
    aria-label="Wendy Wallace"
    class="fd-avatar fd-avatar--accent-color-9 fd-avatar--l"
    role="img"
  >
    WW
    
    <i
      aria-label="Edit"
      class="fd-avatar__zoom-icon sap-icon--edit"
      role="button"
    />
    

  </span>
  

  <span
    aria-label="Wendy Wallace"
    class="fd-avatar fd-avatar--accent-color-10 fd-avatar--xl"
    role="img"
  >
    WW
    
    <i
      aria-label="Edit"
      class="fd-avatar__zoom-icon sap-icon--edit"
      role="button"
    />
    

  </span>
  

</section>
`;
